<resources>
    <string name="app_name">Peduli Pangan</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="skip">Lewati</string>
    <string name="onboarding_title_1">Jelajahi toko-toko</string>
    <string name="onboarding_desc_1">Dengan Peduli Pangan Anda dapat menyimpan Tas kejutan berisi sisa makanan dari kafe, depot, dan toko lokal Anda.</string>
    <string name="onboarding_title_2">Bersiaplah untuk kejutan</string>
    <string name="onboarding_desc_2">Apa hayo</string>
    <string name="onboarding_title_3">Delivery Time</string>
    <string name="onboarding_desc_3">Penjelasan tentang waktu</string>
    <string name="onboarding_title_4">Status Ekonomi</string>
    <string name="onboarding_desc_4">Penjelasan status ekonomi</string>
    <string name="onboarding_title_5">Celebrate</string>
    <string name="onboarding_desc_5">Penjelasan berhasil</string>
    <string name="start_now">Mulai sekarang</string>
    <string name="welcome">Selamat Datang</string>
    <string name="welcome_desc">Yuk mulai</string>
    <string name="register">Daftar</string>
    <string name="login">Masuk</string>
    <string name="welcome_back">Selamat datang kembali</string>
    <string name="input_email_password">Silahkan masukkan email dan password Anda</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Buat akun baru untuk melanjutkan</string>
    <string name="name">Nama</string>
    <string name="pass_less_than_8_char">Kata sandi tidak boleh kurang dari 8 karakter</string>
    <string name="invalid_email">Email tidak valid</string>
    <string name="input_email">Silakan masukkan alamat email Anda</string>
    <string name="input_password">Silakan masukkan kata sandi Anda</string>
    <string name="success">Sukses</string>
    <string name="continue_on">Lanjutkan</string>
    <string name="error">Error:</string>
    <string name="input_name">Silakan masukkan nama Anda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_settings">Settings</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_email">johndoe@email.com</string>
    <string name="settings">Settings</string>
    <string name="language_settings">Change Language</string>
    <string name="economic_settings">Economic Status</string>
    <string name="settings_user_name">John Doe</string>
    <string name="restaurant_dummy">Restaurant</string>
    <string name="rating_dummy">10</string>
    <string name="list_dashboard">List</string>
    <string name="map_dashboard">Map</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="rekomendasi_makanan">Rekomendasi Makanan Hari Ini</string>
    <string name="food_dummy">Nasi Goreng</string>
    <string name="price_dummy">Rp15.000</string>
    <string name="expired_check">Expired Check</string>
    <string name="content_description_fab_scan">Peninjauan</string>
    <string name="expiration_checker">Expiration Checker</string>
    <string name="nearest_restaurant">Restoran Disekitar Anda</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="welcome_title">Selamat Datang, John Doe!</string>
    <string name="product_detail">Nasi Goreng\n</string>
    <string name="product_detail_price">Rp10.000</string>
    <string name="product_detail_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla laoreet faucibus lacus vel efficitur. Proin bibendum elit eget diam fringilla, quis pharetra velit egestas. Ut ligula eros, condimentum id leo a, laoreet pretium leo. Vestibulum tempus mauris ut pharetra porta. Morbi sit amet erat ut mi condimentum interdum nec eget diam. Nulla eget purus lobortis, dignissim lorem hendrerit, ultrices tortor. Sed hendrerit mollis ex vitae pretium. In facilisis neque eu nisi eleifend, sit amet dictum felis venenatis. Etiam accumsan libero justo, non tempor sem dictum et. Suspendisse porta ante posuere, consectetur orci eget, rutrum nibh. Mauris ut posuere enim. Aenean euismod urna malesuada, porttitor ante a, viverra arcu. Sed tincidunt risus sit amet ex accumsan, ut finibus augue sodales.</string>
    <string name="reserve_products">Reserve\n</string>
    <string name="delete_products">Reserve</string>
    <string name="quantity">1</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="berhasil">Berhasil</string>
    <string name="date_reserve">%1$s</string>
    <string name="price_reserve">%s</string>
    <string name="kembali">Kembali</string>
    <string name="notification_text">Pembelian sebesar Rp.10.000 telah berhasil</string>
    <string name="date_notification">10 Des 2023</string>

</resources>