<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailListActivity">

    <ImageView
        android:id="@+id/ivDetailList"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/tvProductNameDetail"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivDetailList"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/product_detail"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvProductPriceDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvProductNameDetail"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:text="@string/product_detail_price"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tvProductDescriptionDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvProductPriceDetail"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/product_detail_description"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_reserve_products"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/delete_products"
        android:backgroundTint="@color/dark_green"
        android:layout_below="@id/tvProductDescriptionDetail"/>
</RelativeLayout>
