<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/settings_background"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/iv_user_settings"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:src="@drawable/baseline_account_circle_24" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_user_settings"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/settings_user_name"/>

        <TextView
            android:id="@+id/tv_user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_user_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/settings_email"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_title_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container" />

    <RelativeLayout
        android:id="@+id/btn_language_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/settings_sub_background"
        android:gravity="center_vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_settings">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/language_settings"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/baseline_translate_24"
            app:drawableTint="@color/black"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/baseline_arrow_forward_ios_24"
            app:tint="@color/black" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_expired_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/settings_sub_background"
        android:gravity="center_vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_language_settings">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:text="@string/expired_check"
            android:textColor="@color/black"
            app:drawableStartCompat="@drawable/baseline_check_24"
            app:drawableTint="@color/black"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/baseline_arrow_forward_ios_24"
            app:tint="@color/black" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundTint="@null"
        android:layout_margin="16dp"
        android:background="@drawable/custom_out_button"
        android:textColor="@color/white"
        android:text="@string/settings_logout"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_expired_check" />
</androidx.constraintlayout.widget.ConstraintLayout>